# SteamDuelBot

./: .dist.env  .gitignore  config.py  jokes.json  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1b97f90a64c2_initial_migrate.py  8d86810de062_initial_migration.py
bot/dialogs/main_menu/: buttons.py  getters.py  selected.py  setup.py  states.py  windows.py
bot/handlers/: __init__.py  base.py
bot/middlewares/: database.py
bot/misc/: jokes.py
infrastructure/database/models/: users.py
infrastructure/database/repo/: requests.py  users.py
