[tool.poetry]
name = "steamduelbot"
version = "0.1.0"
description = ""
authors = ["korot <korotivan2005@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.2.0"
sqlalchemy = "^2.0.23"
environs = "^9.5.0"
asyncpg = "^0.29.0"
httpx = "^0.25.2"
yarl = "^1.9.3"
backoff = "^2.2.1"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
